update modul finance

--- a/assets/pages/tables/data.html
+++ b/assets/pages/tables/data.html
@@ -1631,7 +1631,7 @@
 <!-- page script -->
 <script>
   $(function () {
-    $('#example1').DataTable()
+    $('#example1').DataTable({resposive : true})
     $('#example2').DataTable({
       'paging'      : true,
       'lengthChange': false,
